# vibecoding-board

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.example.yaml  findings.md  main.py  progress.md  pyproject.toml  task_plan.md
data/metrics/: admin_hourly.json  token_ledger.json
docs/superpowers/specs/: 2026-04-07-openai-aggregator-proxy-design.md  2026-04-07-provider-management-hot-update-design.md  2026-04-08-admin-shell-refactor-design.md  2026-04-08-retry-policy-settings-design.md  2026-04-10-provider-always-alive-design.md  2026-04-10-provider-list-order-and-unified-notifications-design.md  2026-04-10-provider-priority-startup-normalization-design.md  2026-04-10-theme-preference-persistence-design.md  2026-04-13-compact-count-display-design.md
tests/: test_admin_api.py  test_admin_metrics.py  test_admin_ui.py  test_api.py  test_concurrency.py  test_config.py  test_forwarding_fixes.py  test_registry.py  test_request_log.py  test_responses_websocket.py  test_state_migration.py
vibecoding_board/: __init__.py  admin_api.py  admin_i18n.py  admin_metrics.py  app.py  cli.py  config.py  config_store.py  registry.py  request_log.py  responses_state.py  runtime.py  service.py  token_ledger.py  turn_state.py
vibecoding_board/static/admin/: index.html
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  format.ts  i18n.tsx  index.css  main.tsx  theme.ts  types.ts
web/src/components/: AppLogo.tsx  ConfirmDialog.tsx  DropdownSelect.tsx  ErrorBoundary.tsx  MetricsCharts.tsx  OverviewView.tsx  ProviderDrawer.tsx  (+5 more)
(+129 files in other folders)
