[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"

[project]
name = "vibecoding-board"
version = "0.1.0"
description = "Local OpenAI-compatible aggregation proxy with failover"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
vibecoding-board = "vibecoding_board.cli:main"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
